<resources>
    <string name="app_name">BakingApp</string>

    <string name="recipe_error_msg">Recipes not found, please try again.</string>

    <!-- used by recipe recycler view item -->
    <string name="serving">8</string>
    <string name="recipe">Recipe</string>

    <!-- used by details fragment-->
    <string name="ingredients_label">Ingredients</string>
    <string name="steps_label">Steps</string>

    <!-- used by ingredient RecyclerView item -->
    <string name="ingredient">Ingredient</string>
    <string name="quantity">Quantity</string>
    <string name="measure">Measure</string>

    <!-- used by step RecyclerView item-->
    <string name="step_short_description">Short Description</string>

    <!-- used by step description fragment-->
    <string name="step_description">Step Description</string>

    <!-- used by step thumbnail image view-->
    <string name="step_thumbnail_description">Step Description Thumbnail image</string>

    <!-- used by step list right chevron-->
    <string name="step_right_chevron">Go to Step Description</string>

    <!-- used by recipe image-->
    <string name="recipe_image_description">Recipe Image</string>

</resources>
