<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_ingredient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryText"
            tools:text="@string/ingredient"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryText"
            tools:text="@string/quantity"
            android:textAlignment="center"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_measure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryText"
            tools:text="@string/measure"
            android:layout_weight="1"/>
    </LinearLayout>

    <View
        android:id="@+id/divider_ingredient"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDivider"/>

</LinearLayout>